Fix slick dots so that they responsive on smaller screen

--- a/src/layout/slider/assets/scss/slider.scss
+++ b/src/layout/slider/assets/scss/slider.scss
@@ -108,7 +108,7 @@ i {
     bottom: 0rem;
     left: 50%;
     transform: translateX(-50%);
-    gap: 1.2rem;
+    gap: 1.1rem;
     padding: 1rem;
     list-style-type: none !important;
     list-style: none !important;
@@ -170,7 +170,7 @@ i {
         gap: 5px;
     }
 
-    .slick-dots button {
+    .slick-dots li button {
         transform: scale(0.6);
     }
 
